--- a/actividades/act_3.html
+++ b/actividades/act_3.html
@@ -54,7 +54,7 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="box-video">
-            <h1> Relacione las columnas </h1>
+            <h1> Pronto estará disponible </h1>
             <iframe width="100%" height="400" src="http://www.fil.una.py/home/images/Sitio-web-en-construccion.png" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
