--- a/autores.html
+++ b/autores.html
@@ -62,14 +62,14 @@
           <br> </p>
       </div>
       <div class="box-autor">
-        <img src="">
+          <img src="./assets/images/imagen-camilo.jpg" class="box-img" alt="esto es una imagen">
         <h1> Camilo Andrés Paipilla Sánchez</h1>
         <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> capaipillas@unadvirtual.edu.co <br>
           <span class="icon-skype"></span><span> camilopaipilla12</span> 
           <br> </p>
       </div>
       <div class="box-autor">
-        <img src="../assets/images/imagen-lizeth.jpg" class="box-img" alt="esto es una imagen">
+          <img src="../assets/images/imagen-lizeth.jpg" class="box-img" alt="esto es una imagen">
         <h1> Yeimy Lizeth Vega Vargas</h1>
         <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> ylvegava@unadvitual.edu.co <br>
           <span class="icon-skype"></span><span> vegalizeth4</span> 
