--- a/multimedia/videos.html
+++ b/multimedia/videos.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>D_S_W</title>
+  <link rel="shortcut icon" href="../assets/images/titulo.ico">
   <link rel="stylesheet" type="text/css" href="../assets/styles/main.css">
 </head>
 
