--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <li> <a href="./index.html">Inicio</a> </li>
         <li>Lecturas
           <ul class="sub-menu">
-            <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
-            <li><a href="../lecturas/lec_2.html">Navegación interna y externa</a> </li>
-            <li><a href="../lecturas/lec_3.html">Contenido de Html</a></li>
-            <li><a href="../lecturas/lec_4.html">CSS3</a></li>
-            <li><a href="../lecturas/lec_5.html">Propiedades de CSS3</a></li>
+            <li><a href="./lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
+            <li><a href="./lecturas/lec_2.html">Navegación interna y externa</a> </li>
+            <li><a href="./lecturas/lec_3.html">Contenido de Html</a></li>
+            <li><a href="./lecturas/lec_4.html">CSS3</a></li>
+            <li><a href="./lecturas/lec_5.html">Propiedades de CSS3</a></li>
           </ul>
         </li>
         <li>Multimedia
